--- a/wp-content/themes/Paradox/assets/scss/modules/_bootstrap_variables.scss
+++ b/wp-content/themes/Paradox/assets/scss/modules/_bootstrap_variables.scss
@@ -48,11 +48,11 @@ $font-size-large:       ceil(($font-size-base * 1.25));
 $font-size-small:       ceil(($font-size-base * 0.85));
 
 $font-size-h1:          floor(($font-size-base * 3.2));
-$font-size-h2:          floor(($font-size-base * 2.9));
-$font-size-h3:          ceil(($font-size-base * 2.2));
-$font-size-h4:          ceil(($font-size-base * 1.9));
-$font-size-h5:          ceil(($font-size-base * 1.5));
-$font-size-h6:          ($font-size-base + 2);
+$font-size-h2:          floor(($font-size-base * 2.5));
+$font-size-h3:          ceil(($font-size-base * 2.0));
+$font-size-h4:          ceil(($font-size-base * 1.5));
+$font-size-h5:          ceil(($font-size-base * 1.0));
+$font-size-h6:          ($font-size-base + 1.0);
 
 // Line Height
 $line-height-base: 1.8;
@@ -63,7 +63,7 @@ $headings-font-family:    $font-family-serif; //"Domine", "proxima-nova", "Helve
 $headings-font-weight:    $bold;
 $headings-line-height:    1.1;
 $h1-color:                $brand-primary !important;
-$headings-color:          $brand-dark;
+$headings-color:          $brand-primary;
 
 //-- Iconography
 //
