--- a/wp-content/themes/Paradox/assets/scss/partials/_modules.scss
+++ b/wp-content/themes/Paradox/assets/scss/partials/_modules.scss
@@ -49,7 +49,7 @@ iframe {
 }
 
 .primary-content img {
-    @include border-radius($border-radius-img);
+    // @include border-radius($border-radius-img);
     max-width: 100%;
     height: auto;
 }
@@ -273,8 +273,12 @@ color: #ffffff!important;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    margin-top: 0px;
+    margin-top: 40px;
     margin-bottom: 0px;
+}
+
+.entry-content h1 {
+    margin-top: 0px;
 }
 
 .site-main {
@@ -356,6 +360,33 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
+.gform_wrapper .top_label li.gfield.gf_left_half {
+    float: left;
+    clear: left !important;
+}
+
+.gform_wrapper .top_label li.gfield.gf_left_half {
+    margin: 0 0 8px 0;
+    width: 49%;
+}
+
+.gform_wrapper .top_label li.gfield.gf_left_half input.medium, .gform_wrapper .top_label li.gfield.gf_left_half input.large, .gform_wrapper .top_label li.gfield.gf_left_half select.medium, .gform_wrapper .top_label li.gfield.gf_left_half select.large, .gform_wrapper .top_label li.gfield.gf_right_half input.medium, .gform_wrapper .top_label li.gfield.gf_right_half input.large, .gform_wrapper .top_label li.gfield.gf_right_half select.medium, .gform_wrapper .top_label li.gfield.gf_right_half select.large {
+width: 97%;
+}
+
+.gform_wrapper .top_label li.gfield.gf_left_half+li.gfield, .gform_wrapper .top_label li.gfield.gf_right_half+li.gfield, .gform_wrapper .top_label li.gfield.gf_left_half+.gform_footer, .gform_wrapper .top_label li.gfield.gf_right_half+.gform_footer {
+clear: both;
+}
+
+.gform_wrapper .top_label li.gfield.gf_right_half {
+float: right;
+clear: right !important;
+}
+
+.gform_wrapper .top_label li.gfield.gf_right_half {
+margin: 0 0 8px 0;
+width: 49%;
+}
 
 
 // Logos Sections /////////////////////////////////////////////////////////////////
@@ -439,6 +470,11 @@ h1, h2, h3, h4, h5, h6 {
                     position: absolute;
                     top: 0;
                     right: 0;
+                }            
+            }
+            div.page-id-5 {
+                img {
+                    height: 700px!important;                    
                 }
             }
 
@@ -510,7 +546,7 @@ background: #000000;
 }
 
 .flex-video {
-    padding-top: 0px;
+    margin: $paragraph-top-margin;
     background: darken($gray-lighter, 10%);    
     @include border-radius($border-radius-img);
 
