--- a/wp-content/themes/Paradox/style.css
+++ b/wp-content/themes/Paradox/style.css
@@ -479,7 +479,7 @@ h1, h2, h3, h4, h5, h6,
   font-family: "Rokkitt", "Times New Roman", Times, serif;
   font-weight: 700;
   line-height: 1.1;
-  color: #181c24;
+  color: #2980b9;
 }
 /* line 16, ../../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/bootstrap-sass-3.0.3.0/vendor/assets/stylesheets/bootstrap/_type.scss */
 h1 small,
@@ -542,27 +542,27 @@ h1, .h1 {
 
 /* line 48, ../../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/bootstrap-sass-3.0.3.0/vendor/assets/stylesheets/bootstrap/_type.scss */
 h2, .h2 {
-  font-size: 52px;
+  font-size: 45px;
 }
 
 /* line 49, ../../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/bootstrap-sass-3.0.3.0/vendor/assets/stylesheets/bootstrap/_type.scss */
 h3, .h3 {
-  font-size: 40px;
+  font-size: 36px;
 }
 
 /* line 50, ../../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/bootstrap-sass-3.0.3.0/vendor/assets/stylesheets/bootstrap/_type.scss */
 h4, .h4 {
-  font-size: 35px;
+  font-size: 27px;
 }
 
 /* line 51, ../../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/bootstrap-sass-3.0.3.0/vendor/assets/stylesheets/bootstrap/_type.scss */
 h5, .h5 {
-  font-size: 27px;
+  font-size: 18px;
 }
 
 /* line 52, ../../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/bootstrap-sass-3.0.3.0/vendor/assets/stylesheets/bootstrap/_type.scss */
 h6, .h6 {
-  font-size: 20px;
+  font-size: 19px;
 }
 
 /* line 58, ../../../../../../../../../../Library/Ruby/Gems/2.0.0/gems/bootstrap-sass-3.0.3.0/vendor/assets/stylesheets/bootstrap/_type.scss */
@@ -10085,9 +10085,6 @@ iframe {
 
 /* line 51, ../scss/partials/_modules.scss */
 .primary-content img {
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
   max-width: 100%;
   height: auto;
 }
@@ -10338,53 +10335,58 @@ a.btn i.fa, a.gform_button i.fa {
 
 /* line 275, ../scss/partials/_modules.scss */
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 0px;
+  margin-top: 40px;
   margin-bottom: 0px;
 }
 
-/* line 281, ../scss/partials/_modules.scss */
+/* line 280, ../scss/partials/_modules.scss */
+.entry-content h1 {
+  margin-top: 0px;
+}
+
+/* line 285, ../scss/partials/_modules.scss */
 .site-main h2, .site-main h3, .site-main h4, .site-main h5, .site-main h6 {
   margin: 35px 0 0 0;
   margin-bottom: 0px;
 }
 
-/* line 288, ../scss/partials/_modules.scss */
+/* line 292, ../scss/partials/_modules.scss */
 .site-title a {
-  font-size: 40px;
+  font-size: 36px;
 }
 
-/* line 294, ../scss/partials/_modules.scss */
+/* line 298, ../scss/partials/_modules.scss */
 .block {
   display: block;
 }
 
-/* line 300, ../scss/partials/_modules.scss */
+/* line 304, ../scss/partials/_modules.scss */
 .dropdown-menu {
   -moz-border-radius: 0px 0px 4px 4px;
   -webkit-border-radius: 0px;
   border-radius: 0px 0px 4px 4px;
 }
-/* line 303, ../scss/partials/_modules.scss */
+/* line 307, ../scss/partials/_modules.scss */
 .dropdown-menu li {
   display: list-item;
 }
-/* line 306, ../scss/partials/_modules.scss */
+/* line 310, ../scss/partials/_modules.scss */
 .dropdown-menu li a {
   color: #cccccc;
 }
 
-/* line 316, ../scss/partials/_modules.scss */
+/* line 320, ../scss/partials/_modules.scss */
 .nav .menu-item .dropdown-menu .menu-item a {
   padding: 10px 30px;
   border-top: 1px solid #222833;
 }
 
-/* line 322, ../scss/partials/_modules.scss */
+/* line 326, ../scss/partials/_modules.scss */
 .menu-item .dropdown-menu {
   padding: 0px 0px;
 }
 
-/* line 328, ../scss/partials/_modules.scss */
+/* line 332, ../scss/partials/_modules.scss */
 .body-content ul li:before {
   font-family: 'FontAwesome';
   content: "\f054";
@@ -10392,13 +10394,13 @@ h1, h2, h3, h4, h5, h6 {
   color: #cccccc;
 }
 
-/* line 338, ../scss/partials/_modules.scss */
+/* line 342, ../scss/partials/_modules.scss */
 .ginput_container input, .ginput_container select, .ginput_container textarea {
   padding-left: 8px;
   padding-right: 8px;
 }
 
-/* line 351, ../scss/partials/_modules.scss */
+/* line 355, ../scss/partials/_modules.scss */
 .body-content .gform_body ul li:before {
   font-family: inherit;
   content: none;
@@ -10407,39 +10409,73 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* line 363, ../scss/partials/_modules.scss */
+.gform_wrapper .top_label li.gfield.gf_left_half {
+  float: left;
+  clear: left !important;
+}
+
+/* line 368, ../scss/partials/_modules.scss */
+.gform_wrapper .top_label li.gfield.gf_left_half {
+  margin: 0 0 8px 0;
+  width: 49%;
+}
+
+/* line 373, ../scss/partials/_modules.scss */
+.gform_wrapper .top_label li.gfield.gf_left_half input.medium, .gform_wrapper .top_label li.gfield.gf_left_half input.large, .gform_wrapper .top_label li.gfield.gf_left_half select.medium, .gform_wrapper .top_label li.gfield.gf_left_half select.large, .gform_wrapper .top_label li.gfield.gf_right_half input.medium, .gform_wrapper .top_label li.gfield.gf_right_half input.large, .gform_wrapper .top_label li.gfield.gf_right_half select.medium, .gform_wrapper .top_label li.gfield.gf_right_half select.large {
+  width: 97%;
+}
+
+/* line 377, ../scss/partials/_modules.scss */
+.gform_wrapper .top_label li.gfield.gf_left_half + li.gfield, .gform_wrapper .top_label li.gfield.gf_right_half + li.gfield, .gform_wrapper .top_label li.gfield.gf_left_half + .gform_footer, .gform_wrapper .top_label li.gfield.gf_right_half + .gform_footer {
+  clear: both;
+}
+
+/* line 381, ../scss/partials/_modules.scss */
+.gform_wrapper .top_label li.gfield.gf_right_half {
+  float: right;
+  clear: right !important;
+}
+
+/* line 386, ../scss/partials/_modules.scss */
+.gform_wrapper .top_label li.gfield.gf_right_half {
+  margin: 0 0 8px 0;
+  width: 49%;
+}
+
+/* line 394, ../scss/partials/_modules.scss */
 .logos {
   background: #eeeeee;
   padding-top: 40px;
   padding-bottom: 40px;
   border-bottom: 1px solid #20638f;
 }
-/* line 369, ../scss/partials/_modules.scss */
+/* line 400, ../scss/partials/_modules.scss */
 .logos .container .cred-logo.trec {
   padding-left: 50px;
   padding-right: 50px;
 }
 
-/* line 379, ../scss/partials/_modules.scss */
+/* line 410, ../scss/partials/_modules.scss */
 .body-content p, .body-content ul, .body-content ol {
   margin: 35px 0 0 0;
 }
-/* line 382, ../scss/partials/_modules.scss */
+/* line 413, ../scss/partials/_modules.scss */
 .body-content ul {
   padding-left: 0;
 }
 
-/* line 385, ../scss/partials/_modules.scss */
+/* line 416, ../scss/partials/_modules.scss */
 .lead {
-  font-size: 20px;
+  font-size: 19px;
   font-weight: normal;
 }
 
-/* line 392, ../scss/partials/_modules.scss */
+/* line 423, ../scss/partials/_modules.scss */
 .primary-content {
   background-color: #ffffff;
   position: relative;
 }
-/* line 395, ../scss/partials/_modules.scss */
+/* line 426, ../scss/partials/_modules.scss */
 .primary-content .sidebar.background {
   display: block;
   opacity: 100;
@@ -10458,18 +10494,18 @@ h1, h2, h3, h4, h5, h6 {
   -o-background-size: cover;
   background-size: cover;
 }
-/* line 417, ../scss/partials/_modules.scss */
+/* line 448, ../scss/partials/_modules.scss */
 .primary-content .sidebar.background .container {
   height: 100%;
   padding-top: 0;
   padding-bottom: 0;
 }
-/* line 422, ../scss/partials/_modules.scss */
+/* line 453, ../scss/partials/_modules.scss */
 .primary-content .sidebar.background .col-sm-4 {
   position: absolute;
   height: 100%;
 }
-/* line 425, ../scss/partials/_modules.scss */
+/* line 456, ../scss/partials/_modules.scss */
 .primary-content .sidebar.background .col-sm-4 div {
   position: absolute;
   right: 0;
@@ -10482,7 +10518,7 @@ h1, h2, h3, h4, h5, h6 {
   -o-background-size: cover;
   background-size: cover;
 }
-/* line 436, ../scss/partials/_modules.scss */
+/* line 467, ../scss/partials/_modules.scss */
 .primary-content .sidebar.background .col-sm-4 div img {
   height: 100% !important;
   width: auto;
@@ -10490,38 +10526,42 @@ h1, h2, h3, h4, h5, h6 {
   top: 0;
   right: 0;
 }
+/* line 476, ../scss/partials/_modules.scss */
+.primary-content .sidebar.background .col-sm-4 div.page-id-5 img {
+  height: 700px !important;
+}
 
-/* line 452, ../scss/partials/_modules.scss */
+/* line 488, ../scss/partials/_modules.scss */
 .widget ul.menu {
   list-style: none;
   padding-left: 0;
 }
 
-/* line 457, ../scss/partials/_modules.scss */
+/* line 493, ../scss/partials/_modules.scss */
 .body-content .widget {
   padding-bottom: 50px;
 }
 
-/* line 461, ../scss/partials/_modules.scss */
+/* line 497, ../scss/partials/_modules.scss */
 .sidebar .widget > div {
   margin-top: 25px;
 }
 
-/* line 465, ../scss/partials/_modules.scss */
+/* line 501, ../scss/partials/_modules.scss */
 .sidebar .widget div > ul, ol {
   padding-left: 0px;
 }
-/* line 468, ../scss/partials/_modules.scss */
+/* line 504, ../scss/partials/_modules.scss */
 .sidebar .widget div > ul li, ol li {
   margin-bottom: 10px;
 }
 
-/* line 473, ../scss/partials/_modules.scss */
+/* line 509, ../scss/partials/_modules.scss */
 .footer .widget {
   padding-bottom: 0px !important;
 }
 
-/* line 477, ../scss/partials/_modules.scss */
+/* line 513, ../scss/partials/_modules.scss */
 .widget_sp_image img {
   height: auto;
   -moz-border-radius: 4px;
@@ -10529,17 +10569,17 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 4px;
 }
 
-/* line 482, ../scss/partials/_modules.scss */
+/* line 518, ../scss/partials/_modules.scss */
 .small-footer .menu li {
   display: inline;
 }
 
-/* line 488, ../scss/partials/_modules.scss */
+/* line 524, ../scss/partials/_modules.scss */
 .footer {
   background-color: #181c24;
 }
 
-/* line 494, ../scss/partials/_modules.scss */
+/* line 530, ../scss/partials/_modules.scss */
 .btn-play {
   z-index: 1000;
   position: absolute;
@@ -10550,7 +10590,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: -40px;
 }
 
-/* line 504, ../scss/partials/_modules.scss */
+/* line 540, ../scss/partials/_modules.scss */
 .player {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
@@ -10558,15 +10598,15 @@ h1, h2, h3, h4, h5, h6 {
   background: #000000;
 }
 
-/* line 512, ../scss/partials/_modules.scss */
+/* line 548, ../scss/partials/_modules.scss */
 .flex-video {
-  padding-top: 0px;
+  margin: 35px 0 0 0;
   background: #d5d5d5;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
   border-radius: 4px;
 }
-/* line 517, ../scss/partials/_modules.scss */
+/* line 553, ../scss/partials/_modules.scss */
 .flex-video img {
   position: absolute;
   top: 0;
@@ -10574,7 +10614,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100%;
 }
-/* line 525, ../scss/partials/_modules.scss */
+/* line 561, ../scss/partials/_modules.scss */
 .flex-video iframe {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
@@ -10582,7 +10622,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 5px;
 }
 
-/* line 531, ../scss/partials/_modules.scss */
+/* line 567, ../scss/partials/_modules.scss */
 .flex-video.widescreen {
   padding-bottom: 56%;
 }
@@ -10659,19 +10699,19 @@ h1, h2, h3, h4, h5, h6 {
   }
   /* line 82, ../scss/partials/_states.scss */
   .body-content h2 {
-    font-size: 36.4px;
+    font-size: 31.5px;
   }
   /* line 85, ../scss/partials/_states.scss */
   .body-content h3 {
-    font-size: 28px;
+    font-size: 25.2px;
   }
   /* line 88, ../scss/partials/_states.scss */
   .body-content h4 {
-    font-size: 24.5px;
+    font-size: 18.9px;
   }
   /* line 91, ../scss/partials/_states.scss */
   .body-content h5 {
-    font-size: 21.6px;
+    font-size: 14.4px;
   }
   /* line 98, ../scss/partials/_states.scss */
   .body-content p, .body-content ul, .body-content ol {
