--- a/wp-content/themes/Paradox/style.css
+++ b/wp-content/themes/Paradox/style.css
@@ -10124,7 +10124,7 @@ header .navbar-brand img {
 }
 
 /* line 81, ../scss/partials/_modules.scss */
-.subhead {
+.subhead, .entry-meta {
   margin-top: -11px !important;
   text-transform: uppercase;
   font-size: 0.85em;
@@ -10137,7 +10137,14 @@ header .navbar-brand img {
   z-index: 2;
 }
 
-/* line 95, ../scss/partials/_modules.scss */
+/* line 93, ../scss/partials/_modules.scss */
+.sidebar {
+  padding-bottom: 2000px;
+  margin-bottom: -2000px;
+  overflow: auto;
+}
+
+/* line 101, ../scss/partials/_modules.scss */
 #bg {
   position: fixed;
   top: -50%;
@@ -10147,7 +10154,7 @@ header .navbar-brand img {
   z-index: -1;
 }
 
-/* line 104, ../scss/partials/_modules.scss */
+/* line 110, ../scss/partials/_modules.scss */
 #bg img {
   position: absolute;
   top: 0;
@@ -10159,239 +10166,249 @@ header .navbar-brand img {
   min-height: 50%;
 }
 
-/* line 117, ../scss/partials/_modules.scss */
+/* line 123, ../scss/partials/_modules.scss */
 .masthead {
   background-color: transparent;
 }
-/* line 119, ../scss/partials/_modules.scss */
+/* line 125, ../scss/partials/_modules.scss */
 .masthead h1, .masthead h2, .masthead h3, .masthead h4, .masthead h5, .masthead h6 {
   color: #ffffff;
   line-height: 0.75;
 }
-/* line 120, ../scss/partials/_modules.scss */
+/* line 126, ../scss/partials/_modules.scss */
 .masthead p {
   color: #a5d8f4;
 }
 
-/* line 126, ../scss/partials/_modules.scss */
+/* line 132, ../scss/partials/_modules.scss */
 .sidebar-col .attachment-sidebar-thumb {
   margin-bottom: 50px;
   max-width: 100%;
   height: auto;
 }
 
-/* line 134, ../scss/partials/_modules.scss */
+/* line 140, ../scss/partials/_modules.scss */
 .body-content .btn, .body-content .gform_button {
   margin: 35px 0 0 0;
   margin-bottom: 10px;
 }
 
-/* line 140, ../scss/partials/_modules.scss */
+/* line 146, ../scss/partials/_modules.scss */
 .footer .btn, .footer .gform_button {
   margin-bottom: 10px;
 }
-/* line 141, ../scss/partials/_modules.scss */
+/* line 147, ../scss/partials/_modules.scss */
 .footer a {
   color: white;
 }
-/* line 143, ../scss/partials/_modules.scss */
+/* line 149, ../scss/partials/_modules.scss */
 .footer a:hover {
   color: white;
 }
 
-/* line 149, ../scss/partials/_modules.scss */
+/* line 155, ../scss/partials/_modules.scss */
 a.btn i.fa, a.gform_button i.fa {
   margin-right: 15px;
 }
 
-/* line 153, ../scss/partials/_modules.scss */
+/* line 159, ../scss/partials/_modules.scss */
 .btn-secondary {
   color: white;
   background-color: #990012;
   border-color: #80000f;
 }
 
-/* line 159, ../scss/partials/_modules.scss */
+/* line 165, ../scss/partials/_modules.scss */
 .social-btns {
   margin-top: 25px;
 }
-/* line 162, ../scss/partials/_modules.scss */
+/* line 168, ../scss/partials/_modules.scss */
 .social-btns i {
   margin: 0 8px 0 8px;
 }
 
-/* line 170, ../scss/partials/_modules.scss */
+/* line 176, ../scss/partials/_modules.scss */
 .navbar-btn.navbar-right {
   margin-left: 30px;
 }
 
-/* line 171, ../scss/partials/_modules.scss */
+/* line 177, ../scss/partials/_modules.scss */
 .navbar-btn.navbar-left {
   margin-right: 30px;
 }
 
-/* line 173, ../scss/partials/_modules.scss */
+/* line 179, ../scss/partials/_modules.scss */
 .nav > .menu-item > a {
   font-weight: 500;
 }
 
-/* line 177, ../scss/partials/_modules.scss */
+/* line 183, ../scss/partials/_modules.scss */
 .navbar {
   margin-bottom: 0px;
 }
 
-/* line 185, ../scss/partials/_modules.scss */
+/* line 191, ../scss/partials/_modules.scss */
 .navbar-toggle {
   margin-top: 23px;
   margin-bottom: 23px;
   margin-right: 6px;
 }
 
-/* line 191, ../scss/partials/_modules.scss */
+/* line 197, ../scss/partials/_modules.scss */
 .navbar-toggle i {
   color: #ffffff;
 }
 
-/* line 195, ../scss/partials/_modules.scss */
+/* line 201, ../scss/partials/_modules.scss */
 .navbar-toggle .icon-bar {
   height: 3px;
 }
 
-/* line 199, ../scss/partials/_modules.scss */
+/* line 205, ../scss/partials/_modules.scss */
 .navbar-toggle:focus {
   outline: none;
 }
 
-/* line 203, ../scss/partials/_modules.scss */
+/* line 209, ../scss/partials/_modules.scss */
 .navbar-collapse .navbar-nav li {
   border-bottom: 1px solid rgba(26, 26, 26, 0);
 }
 
-/* line 207, ../scss/partials/_modules.scss */
+/* line 213, ../scss/partials/_modules.scss */
 .navbar-nav {
   margin: 0px -15px;
 }
 
-/* line 211, ../scss/partials/_modules.scss */
+/* line 217, ../scss/partials/_modules.scss */
 .navbar-collapse {
   max-height: 700px;
 }
 
-/* line 215, ../scss/partials/_modules.scss */
+/* line 221, ../scss/partials/_modules.scss */
 .sub-menu .menu-item:hover {
   color: white !important;
 }
 
-/* line 219, ../scss/partials/_modules.scss */
+/* line 225, ../scss/partials/_modules.scss */
 .sub-menu .menu-item {
   background: #181c24;
 }
-/* line 222, ../scss/partials/_modules.scss */
+/* line 228, ../scss/partials/_modules.scss */
 .sub-menu .menu-item a:hover {
   color: #ffffff;
 }
 
-/* line 227, ../scss/partials/_modules.scss */
+/* line 233, ../scss/partials/_modules.scss */
 .nav .open .dropdown-toggle {
   color: white !important;
 }
 
-/* line 231, ../scss/partials/_modules.scss */
+/* line 237, ../scss/partials/_modules.scss */
 .mobile-landing {
   border-bottom: 1px solid #1b557a;
   padding-bottom: 10px;
   margin-bottom: 18px;
   background-color: #eeeeee;
 }
-/* line 237, ../scss/partials/_modules.scss */
+/* line 243, ../scss/partials/_modules.scss */
 .mobile-landing .phone a {
   margin-top: 15px;
   font-size: 17px;
   padding: 14px 0px;
 }
 
-/* line 246, ../scss/partials/_modules.scss */
+/* line 252, ../scss/partials/_modules.scss */
+.entry-meta {
+  margin-top: 25px !important;
+}
+
+/* line 254, ../scss/partials/_modules.scss */
+.blog .primary-content {
+  padding-top: 0px;
+}
+
+/* line 258, ../scss/partials/_modules.scss */
 .footer-logo {
   padding-bottom: 75px;
   display: block;
 }
 
-/* line 251, ../scss/partials/_modules.scss */
+/* line 263, ../scss/partials/_modules.scss */
 .small-footer {
   background: transparent;
 }
-/* line 254, ../scss/partials/_modules.scss */
+/* line 266, ../scss/partials/_modules.scss */
 .small-footer a {
   display: block;
   text-align: center;
 }
-/* line 259, ../scss/partials/_modules.scss */
+/* line 271, ../scss/partials/_modules.scss */
 .small-footer .footer-credits {
   width: 100%;
 }
-/* line 263, ../scss/partials/_modules.scss */
+/* line 275, ../scss/partials/_modules.scss */
 .small-footer .footer-menu {
   width: 100%;
 }
-/* line 266, ../scss/partials/_modules.scss */
+/* line 278, ../scss/partials/_modules.scss */
 .small-footer .footer-menu .menu li a {
   font-size: 16px;
 }
 
-/* line 279, ../scss/partials/_modules.scss */
+/* line 291, ../scss/partials/_modules.scss */
 h1, h2, h3, h4, h5, h6 {
   margin-top: 40px;
   margin-bottom: 0px;
 }
 
-/* line 284, ../scss/partials/_modules.scss */
+/* line 296, ../scss/partials/_modules.scss */
 .entry-content h1 {
   margin-top: 0px;
 }
 
-/* line 289, ../scss/partials/_modules.scss */
+/* line 301, ../scss/partials/_modules.scss */
 .site-main h2, .site-main h3, .site-main h4, .site-main h5, .site-main h6 {
   margin: 35px 0 0 0;
   margin-bottom: 0px;
 }
 
-/* line 296, ../scss/partials/_modules.scss */
+/* line 308, ../scss/partials/_modules.scss */
 .site-title a {
   font-size: 36px;
 }
 
-/* line 302, ../scss/partials/_modules.scss */
+/* line 314, ../scss/partials/_modules.scss */
 .block {
   display: block;
 }
 
-/* line 308, ../scss/partials/_modules.scss */
+/* line 320, ../scss/partials/_modules.scss */
 .dropdown-menu {
   -moz-border-radius: 0px 0px 4px 4px;
   -webkit-border-radius: 0px;
   border-radius: 0px 0px 4px 4px;
 }
-/* line 311, ../scss/partials/_modules.scss */
+/* line 323, ../scss/partials/_modules.scss */
 .dropdown-menu li {
   display: list-item;
 }
-/* line 314, ../scss/partials/_modules.scss */
+/* line 326, ../scss/partials/_modules.scss */
 .dropdown-menu li a {
   color: #cccccc;
 }
 
-/* line 324, ../scss/partials/_modules.scss */
+/* line 336, ../scss/partials/_modules.scss */
 .nav .menu-item .dropdown-menu .menu-item a {
   padding: 10px 30px;
   border-top: 1px solid #222833;
 }
 
-/* line 330, ../scss/partials/_modules.scss */
+/* line 342, ../scss/partials/_modules.scss */
 .menu-item .dropdown-menu {
   padding: 0px 0px;
 }
 
-/* line 336, ../scss/partials/_modules.scss */
+/* line 348, ../scss/partials/_modules.scss */
 .body-content ul li:before {
   font-family: 'FontAwesome';
   content: "\f054";
@@ -10399,13 +10416,13 @@ h1, h2, h3, h4, h5, h6 {
   color: #cccccc;
 }
 
-/* line 346, ../scss/partials/_modules.scss */
+/* line 358, ../scss/partials/_modules.scss */
 .ginput_container input, .ginput_container select, .ginput_container textarea {
   padding-left: 8px;
   padding-right: 8px;
 }
 
-/* line 359, ../scss/partials/_modules.scss */
+/* line 371, ../scss/partials/_modules.scss */
 .body-content .gform_body ul li:before {
   font-family: inherit;
   content: none;
@@ -10413,74 +10430,75 @@ h1, h2, h3, h4, h5, h6 {
   color: inherit;
 }
 
-/* line 367, ../scss/partials/_modules.scss */
+/* line 379, ../scss/partials/_modules.scss */
 .gform_wrapper .top_label li.gfield.gf_left_half {
   float: left;
   clear: left !important;
 }
 
-/* line 372, ../scss/partials/_modules.scss */
+/* line 384, ../scss/partials/_modules.scss */
 .gform_wrapper .top_label li.gfield.gf_left_half {
   margin: 0 0 8px 0;
   width: 49%;
 }
 
-/* line 377, ../scss/partials/_modules.scss */
+/* line 389, ../scss/partials/_modules.scss */
 .gform_wrapper .top_label li.gfield.gf_left_half input.medium, .gform_wrapper .top_label li.gfield.gf_left_half input.large, .gform_wrapper .top_label li.gfield.gf_left_half select.medium, .gform_wrapper .top_label li.gfield.gf_left_half select.large, .gform_wrapper .top_label li.gfield.gf_right_half input.medium, .gform_wrapper .top_label li.gfield.gf_right_half input.large, .gform_wrapper .top_label li.gfield.gf_right_half select.medium, .gform_wrapper .top_label li.gfield.gf_right_half select.large {
   width: 97%;
 }
 
-/* line 381, ../scss/partials/_modules.scss */
+/* line 393, ../scss/partials/_modules.scss */
 .gform_wrapper .top_label li.gfield.gf_left_half + li.gfield, .gform_wrapper .top_label li.gfield.gf_right_half + li.gfield, .gform_wrapper .top_label li.gfield.gf_left_half + .gform_footer, .gform_wrapper .top_label li.gfield.gf_right_half + .gform_footer {
   clear: both;
 }
 
-/* line 385, ../scss/partials/_modules.scss */
+/* line 397, ../scss/partials/_modules.scss */
 .gform_wrapper .top_label li.gfield.gf_right_half {
   float: right;
   clear: right !important;
 }
 
-/* line 390, ../scss/partials/_modules.scss */
+/* line 402, ../scss/partials/_modules.scss */
 .gform_wrapper .top_label li.gfield.gf_right_half {
   margin: 0 0 8px 0;
   width: 49%;
 }
 
-/* line 398, ../scss/partials/_modules.scss */
+/* line 410, ../scss/partials/_modules.scss */
 .logos {
   background: #eeeeee;
   padding-top: 40px;
   padding-bottom: 40px;
   border-bottom: 1px solid #20638f;
 }
-/* line 404, ../scss/partials/_modules.scss */
+/* line 416, ../scss/partials/_modules.scss */
 .logos .container .cred-logo.trec {
   padding-left: 50px;
   padding-right: 50px;
 }
 
-/* line 414, ../scss/partials/_modules.scss */
+/* line 426, ../scss/partials/_modules.scss */
 .body-content p, .body-content ul, .body-content ol {
   margin: 35px 0 0 0;
 }
-/* line 417, ../scss/partials/_modules.scss */
+/* line 429, ../scss/partials/_modules.scss */
 .body-content ul {
   padding-left: 0;
 }
 
-/* line 420, ../scss/partials/_modules.scss */
+/* line 432, ../scss/partials/_modules.scss */
 .lead {
   font-size: 19px;
   font-weight: normal;
 }
 
-/* line 427, ../scss/partials/_modules.scss */
+/* line 439, ../scss/partials/_modules.scss */
 .primary-content {
+  z-index: -1;
   background-color: #ffffff;
   position: relative;
 }
-/* line 430, ../scss/partials/_modules.scss */
+/* line 443, ../scss/partials/_modules.scss */
 .primary-content .sidebar.background {
   display: block;
   opacity: 100;
@@ -10499,18 +10517,18 @@ h1, h2, h3, h4, h5, h6 {
   -o-background-size: cover;
   background-size: cover;
 }
-/* line 452, ../scss/partials/_modules.scss */
+/* line 465, ../scss/partials/_modules.scss */
 .primary-content .sidebar.background .container {
   height: 100%;
   padding-top: 0;
   padding-bottom: 0;
 }
-/* line 457, ../scss/partials/_modules.scss */
+/* line 470, ../scss/partials/_modules.scss */
 .primary-content .sidebar.background .col-sm-4 {
   position: absolute;
   height: 100%;
 }
-/* line 460, ../scss/partials/_modules.scss */
+/* line 473, ../scss/partials/_modules.scss */
 .primary-content .sidebar.background .col-sm-4 div {
   position: absolute;
   right: 0;
@@ -10523,7 +10541,7 @@ h1, h2, h3, h4, h5, h6 {
   -o-background-size: cover;
   background-size: cover;
 }
-/* line 471, ../scss/partials/_modules.scss */
+/* line 484, ../scss/partials/_modules.scss */
 .primary-content .sidebar.background .col-sm-4 div img {
   height: 100% !important;
   width: auto;
@@ -10531,42 +10549,42 @@ h1, h2, h3, h4, h5, h6 {
   top: 0;
   right: 0;
 }
-/* line 480, ../scss/partials/_modules.scss */
+/* line 493, ../scss/partials/_modules.scss */
 .primary-content .sidebar.background .col-sm-4 .page-id-5 img, .primary-content .sidebar.background .col-sm-4 .page-id-7 img, .primary-content .sidebar.background .col-sm-4 .page-id-100 img {
   height: 700px !important;
 }
 
-/* line 492, ../scss/partials/_modules.scss */
+/* line 505, ../scss/partials/_modules.scss */
 .widget ul.menu {
   list-style: none;
   padding-left: 0;
 }
 
-/* line 497, ../scss/partials/_modules.scss */
+/* line 510, ../scss/partials/_modules.scss */
 .body-content .widget {
   padding-bottom: 50px;
 }
 
-/* line 501, ../scss/partials/_modules.scss */
+/* line 514, ../scss/partials/_modules.scss */
 .sidebar .widget > div {
   margin-top: 25px;
 }
 
-/* line 505, ../scss/partials/_modules.scss */
+/* line 518, ../scss/partials/_modules.scss */
 .sidebar .widget div > ul, ol {
   padding-left: 0px;
 }
-/* line 508, ../scss/partials/_modules.scss */
+/* line 521, ../scss/partials/_modules.scss */
 .sidebar .widget div > ul li, ol li {
   margin-bottom: 10px;
 }
 
-/* line 513, ../scss/partials/_modules.scss */
+/* line 526, ../scss/partials/_modules.scss */
 .footer .widget {
   padding-bottom: 0px !important;
 }
 
-/* line 517, ../scss/partials/_modules.scss */
+/* line 530, ../scss/partials/_modules.scss */
 .widget_sp_image img {
   height: auto;
   -moz-border-radius: 4px;
@@ -10574,17 +10592,18 @@ h1, h2, h3, h4, h5, h6 {
   border-radius: 4px;
 }
 
-/* line 522, ../scss/partials/_modules.scss */
+/* line 535, ../scss/partials/_modules.scss */
 .small-footer .menu li {
   display: inline;
 }
 
-/* line 528, ../scss/partials/_modules.scss */
+/* line 541, ../scss/partials/_modules.scss */
 .footer {
   background-color: #181c24;
+  z-index: 50;
 }
 
-/* line 534, ../scss/partials/_modules.scss */
+/* line 548, ../scss/partials/_modules.scss */
 .btn-play {
   z-index: 1000;
   position: absolute;
@@ -10595,7 +10614,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: -40px;
 }
 
-/* line 544, ../scss/partials/_modules.scss */
+/* line 558, ../scss/partials/_modules.scss */
 .player {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
@@ -10603,7 +10622,7 @@ h1, h2, h3, h4, h5, h6 {
   background: #000000;
 }
 
-/* line 552, ../scss/partials/_modules.scss */
+/* line 566, ../scss/partials/_modules.scss */
 .flex-video {
   margin: 35px 0 0 0;
   background: #d5d5d5;
@@ -10611,7 +10630,7 @@ h1, h2, h3, h4, h5, h6 {
   -webkit-border-radius: 4px;
   border-radius: 4px;
 }
-/* line 557, ../scss/partials/_modules.scss */
+/* line 571, ../scss/partials/_modules.scss */
 .flex-video img {
   position: absolute;
   top: 0;
@@ -10619,7 +10638,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100%;
 }
-/* line 565, ../scss/partials/_modules.scss */
+/* line 579, ../scss/partials/_modules.scss */
 .flex-video iframe {
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
@@ -10627,7 +10646,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 5px;
 }
 
-/* line 571, ../scss/partials/_modules.scss */
+/* line 585, ../scss/partials/_modules.scss */
 .flex-video.widescreen {
   padding-bottom: 56%;
 }
