--- a/wp-content/themes/Paradox/assets/scss/modules/_bootstrap_variables.scss
+++ b/wp-content/themes/Paradox/assets/scss/modules/_bootstrap_variables.scss
@@ -12,21 +12,24 @@ $gray-lighter:          lighten(#000, 93.5%); // #eee
 // Color Conventions
 $brand-primary:         #2980b9; // #4D6387; // #6AA7D0;
 $brand-secondary:       #990012; // #428bca;
-$brand-success:         #2ecc71;
+$brand-success:         #51D15B;
 $brand-info:            #3498db; // #5bc0de;
 $brand-warning:         #f0ad4e;
 $brand-danger:          #c0392b;
-$brand-dark:            #181c24;
+$brand-dark:            #226FA2;
 $brand-light:           #A5D8F4;
 
 // Scaffolding /////////////////////////////////////////////////////////////////
 $body-bg:               $brand-primary; //#ecf0f1;
-$header-bg-color:       $brand-dark;
+$header-bg-color:       $body-bg;
 $footer-bg-color:       $brand-dark;
 $text-color:            #7f8c8d;
 $link-color:            $brand-primary;
-$link-hover-color:      darken($link-color, 15%);
+$link-hover-color:      $brand-light;
 
+// Border Radius /////////////////////////////////////////////////////////////////
+$default-border-radius:     4px;
+$border-radius-img:         4px;
 
 // Typography /////////////////////////////////////////////////////////////////
 
@@ -91,8 +94,8 @@ $line-height-large:         1.33;
 $line-height-small:         1.5;
 
 $border-radius-base:        $default-border-radius;
-$border-radius-large:       4px;
-$border-radius-small:       2px;
+$border-radius-large:       $default-border-radius;
+$border-radius-small:       $default-border-radius;
 
 //** Global color for active items (e.g., navs or dropdowns).
 $component-active-color:    #fff;
@@ -175,7 +178,7 @@ $btn-secondary-border:             darken($btn-secondary-bg, 5%);
 // //** `<input>` border color
 // $input-border:                   #ccc;
 // //** `<input>` border radius
-// $input-border-radius:            $border-radius-base;
+$input-border-radius:            4px;
 // //** Border color for inputs on focus
 // $input-border-focus:             #66afe9;
 
@@ -321,7 +324,7 @@ $dropdown-link-active-bg:        inherit;
 // Components /////////////////////////////////////////////////////////////////
 
 // // Basics of a navbar
-$navbar-height:                    180px;
+$navbar-height:                    40px;
 // $navbar-margin-bottom:             $line-height-computed;
 $navbar-border-radius:             0px;
 // $navbar-padding-horizontal:        floor(($grid-gutter-width / 2));
@@ -334,11 +337,11 @@ $navbar-default-border:            transparent; //darken($header-bg-color, 10%);
 
 // // Navbar links
 $navbar-default-link-color:                #ffffff;
-$navbar-default-link-hover-color:          #ffffff;
+$navbar-default-link-hover-color:          $brand-light;
 $navbar-default-link-open-color:           $navbar-default-link-hover-color;
 // $navbar-default-link-hover-bg:             transparent;
 // $navbar-default-link-active-color:         #ffffff;
-$navbar-default-link-active-bg:            transparent;
+$navbar-default-link-active-bg:            lighten($header-bg-color, 10%);
 // $navbar-default-link-disabled-color:       #ccc;
 // $navbar-default-link-disabled-bg:          transparent;
 
