Complete styling of forms, add stock photos

--- a/wp-content/themes/Paradox/assets/scss/modules/_bootstrap_variables.scss
+++ b/wp-content/themes/Paradox/assets/scss/modules/_bootstrap_variables.scss
@@ -12,6 +12,7 @@ $gray-lighter:          lighten(#000, 93.5%); // #eee
 // Color Conventions
 $brand-primary:         #2980b9; // #4D6387; // #6AA7D0;
 $brand-secondary:       #990012; // #428bca;
+$brand-default:         $gray-light;
 $brand-success:         #51D15B;
 $brand-info:            #3498db; // #5bc0de;
 $brand-warning:         #f0ad4e;
