Finish out content and update logo

--- a/wp-content/themes/Paradox/assets/scss/modules/_bootstrap_variables.scss
+++ b/wp-content/themes/Paradox/assets/scss/modules/_bootstrap_variables.scss
@@ -11,7 +11,7 @@ $gray-lighter:          lighten(#000, 93.5%); // #eee
 
 // Color Conventions
 $brand-primary:         #2980b9; // #4D6387; // #6AA7D0;
-$brand-secondary:       #990012; // #428bca;
+$brand-secondary:       #ffb71c; // #428bca;
 $brand-default:         $gray-light;
 $brand-success:         #51D15B;
 $brand-info:            #3498db; // #5bc0de;
@@ -142,7 +142,7 @@ $caret-width-large:         5px;
 // $btn-primary-bg:                 $brand-primary;
 // $btn-primary-border:             darken($btn-primary-bg, 5%);
 
-$btn-secondary-color:              #fff;
+$btn-secondary-color:              #84440e;
 $btn-secondary-bg:                 $brand-secondary;
 $btn-secondary-border:             darken($btn-secondary-bg, 5%);
 
