--- a/wp-content/themes/Paradox/assets/scss/partials/_layouts.scss
+++ b/wp-content/themes/Paradox/assets/scss/partials/_layouts.scss
@@ -10,8 +10,13 @@ body > header {
 // Top Header Section /////////////////////////////////////////////////////////////////
 
 .top-navbar {
-    padding-top: $space-lg;
-    padding-bottom: $space-lg;    
+    padding-top: 75px;
+    padding-bottom: 75px; 
+}
+
+.page-template-page-home-php {
+    .top-navbar { padding-bottom: 70px; }
+    .navbar-header { height: 90px; }
 }
 
 .top-header {
@@ -21,12 +26,18 @@ body > header {
 
 // Navbar Section /////////////////////////////////////////////////////////////////
 
+.top-navbar .navbar {
+    height: 48px;
+}
+
 // Masthead Section /////////////////////////////////////////////////////////////////
 
 .masthead {
-    padding-top: $space-sm;
+    padding-top: 0;
     padding-bottom: $space-lg;    
 }
+
+
 
 // Body Content Section /////////////////////////////////////////////////////////////////
 
