--- a/wp-content/themes/Paradox/assets/scss/partials/_modules.scss
+++ b/wp-content/themes/Paradox/assets/scss/partials/_modules.scss
@@ -8,6 +8,21 @@ a, .button, .gform_button, .btn {
     }
 }
 
+.btn-special {
+    a {
+        
+        @extend .btn-secondary; 
+        @extend .navbar-btn;
+        margin-left: 10px;
+        margin-top: 0px;
+    }
+}
+
+.img-responsive {
+    // display: inline!important;
+    margin: 0 auto;
+}
+
 hr {
     border-top: 1px solid $gray-light;
 }
@@ -94,16 +109,23 @@ iframe {
     height: auto;
 }
 
-header .navbar-brand {
-    // padding-top: 15px;
-    font-family: $font-family-serif;
-    font-weight: $bold;
-    font-size: 40px;
-    img {
-        width: 240px;
-        height: auto;
-        float: left;
+header {
+    .navbar-brand {
+        // padding-top: 15px;
+        font-family: $font-family-serif;
+        font-weight: $bold;
+        font-size: 40px;
+        position: absolute;
+        top: -67px;
+        left: 0;    
+        margin-left: 30px;
+        img {
+            width: 454px;
+            height: auto;
+            float: left;
+        }
     }
+    .navbar-nav { padding-right: 30px; }
 }
 
 .col-no-padding {
@@ -174,7 +196,7 @@ header .navbar-brand {
 .masthead {
     background-color: transparent;
     h1, h2, h3, h4, h5, h6 { color: #ffffff; line-height: 0.75; }
-    h1 { margin-top: 0; }
+    h1 { margin-top: 75px; }
     p { color: $brand-light; }
     // p.lead { margin-top: 0; }
 }
@@ -213,9 +235,13 @@ margin-right: 15px;
 }
 
 .btn-secondary {
-color: $btn-secondary-color;
-background-color: $btn-secondary-bg;
-border-color: $btn-secondary-border;
+    color: $btn-secondary-color!important;
+    background-color: $btn-secondary-bg;
+    border-color: $btn-secondary-border;
+    &:hover {
+        background-color: darken($btn-secondary-bg, 15%)!important;
+        color: $btn-secondary-color;
+    }
 }
 
 .social-btns {
@@ -235,6 +261,7 @@ border-color: $btn-secondary-border;
 .nav > .menu-item > a {
     font-weight: 500;
     @include border-radius(50px);
+    font-size: 19px;
 }
 
 .navbar {
@@ -376,6 +403,12 @@ h1, h2, h3, h4, h5, h6 {
 .entry-title,
 .page-id-4 h2 {
     margin-top: 0;
+}
+
+.entry-content {
+    .btn {
+        margin-top: 0;
+    }
 }
 
 .site-main {
