--- a/wp-content/themes/Paradox/assets/scss/partials/_modules.scss
+++ b/wp-content/themes/Paradox/assets/scss/partials/_modules.scss
@@ -125,7 +125,9 @@ header {
             float: left;
         }
     }
-    .navbar-nav { padding-right: 30px; }
+    .navbar-nav { 
+        padding-right: 30px; 
+    }
 }
 
 .col-no-padding {
@@ -261,7 +263,7 @@ margin-right: 15px;
 .nav > .menu-item > a {
     font-weight: 500;
     @include border-radius(50px);
-    font-size: 19px;
+    font-size: 17px;
 }
 
 .navbar {
