--- a/wp-content/themes/Paradox/assets/scss/partials/_modules.scss
+++ b/wp-content/themes/Paradox/assets/scss/partials/_modules.scss
@@ -20,7 +20,7 @@ a, .button, .gform_button, .btn {
 
 .img-responsive {
     // display: inline!important;
-    margin: 0 auto;
+    // margin: 0 auto;
 }
 
 hr {
@@ -107,6 +107,10 @@ iframe {
     // @include border-radius($border-radius-img);
     max-width: 100%;
     height: auto;
+}
+
+.navbar .nav > li {
+z-index: 10000;
 }
 
 header {
@@ -302,6 +306,11 @@ body > header > .top-navbar {
 
 .navbar-collapse {
     max-height: $navbar-collapse-max-height;
+    z-index: 9999;    
+}
+
+.navbar-collapse.in {
+
 }
 
 .sub-menu .menu-item:hover {
@@ -321,11 +330,11 @@ color: #ffffff!important;
 }
 
 .mobile-landing {
-    border-bottom: 1px solid $hr-border;
+    // border-bottom: 1px solid $hr-border;
     padding-bottom: 10px;
     margin-bottom: 18px;
-    background-color: $gray-lighter;
-
+    background-color: darken($brand-primary, 10%);
+    z-index: 1000;
     .phone a {
         margin-top: 15px;
         font-size: 17px;
